# magnate

./: .gitignore  Cargo.toml  README.md
assets/: border.json
bevy-point-selection/: Cargo.toml
bevy-point-selection/src/: lib.rs
levels/: 0-empty.json  0.json  1-tutorial.json  1.json  2-walls-berni-3.json  2.json  3.json  4-hexagon.json  5-circle-berni-4.json  6-nook-berni-5.json  7-wall-hole.json  end.json
src/: level.rs  level_editor.rs  main.rs  rotation.rs  savegame.rs  tilemap.rs
wasm/: index.html
