[package]
name = "game-magnate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Platform dependent dynamic linking feature, doesn't work
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
# bevy = "0.8"
bevy_asset_loader = { version = "0.12", features = ["2d"] }
bevy-point-selection = { path = "./bevy-point-selection"}
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"


# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version="0.3", features = ["console", "Window", "Storage"]}

[workspace]
members = [
    "bevy-point-selection",
]


# From https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"
